// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterBar matches snapshot 1`] = `
.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  line-height: 1;
}

.emotion-6 {
  border: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0 6px 6px 0;
  max-width: 250px;
  outline: none;
  padding: 0 8px 0 0;
  background: #ffffff;
}

.emotion-6:focus {
  outline: solid 4px #ffbf47;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  background: #b10e1e;
  color: #ffffff;
  display: inline-block;
  font-family: Roboto,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.25;
  min-height: 20px;
  min-width: 20px;
  padding: 1px 4px;
  text-align: center;
}

.emotion-2 {
  display: inline-block;
  font-family: Roboto,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.25;
  padding: 2px;
}

.emotion-32 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -6px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-14 {
  border: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0 6px 6px 0;
  max-width: 250px;
  outline: none;
  padding: 0 8px 0 0;
  background: #ffffff;
  color: #ffffff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #6f777b;
}

.emotion-14:focus {
  outline: solid 4px #ffbf47;
}

.emotion-14:last-child {
  margin-right: 0px;
}

.emotion-8 {
  background: #dee0e2;
  color: #0b0c0c;
  display: inline-block;
  font-family: Roboto,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.25;
  min-height: 20px;
  min-width: 20px;
  padding: 1px 4px;
  text-align: center;
}

.emotion-22 {
  border: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0 6px 6px 0;
  max-width: 250px;
  outline: none;
  padding: 0 8px 0 0;
  background: #005ea5;
  color: #ffffff;
  outline: 2px solid #005ea5;
  color: #ffffff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #005ea5;
}

.emotion-22:focus {
  outline: solid 4px #ffbf47;
}

.emotion-22:last-child {
  margin-right: 0px;
}

<CounterBar>
  <Wrapper>
    <div
      className="emotion-34 emotion-35"
    >
      <Total
        component="a"
        score={2}
        scoreBackgroundColor="#b10e1e"
        scoreColor="#ffffff"
        scoreDisabledBackgroundColor="#dee0e2"
        scoreDisabledColor="#0b0c0c"
      >
        <TotalWrapperInner
          disabled={false}
        >
          <a
            className="emotion-6 emotion-7"
            disabled={false}
          >
            <ResultCountTitle
              count={2}
              countBackgroundColor="#b10e1e"
              countColor="#ffffff"
            >
              <Wrapper>
                <div
                  className="emotion-4 emotion-1"
                >
                  <ResultCount
                    backgroundColor="#b10e1e"
                    color="#ffffff"
                  >
                    <StyledResultCount
                      backgroundColor="#b10e1e"
                      color="#ffffff"
                    >
                      <span
                        className="emotion-0 emotion-1"
                        color="#ffffff"
                      >
                        2
                      </span>
                    </StyledResultCount>
                  </ResultCount>
                  <Title>
                    <div
                      className="emotion-2 emotion-3"
                    >
                      All counters
                    </div>
                  </Title>
                </div>
              </Wrapper>
            </ResultCountTitle>
          </a>
        </TotalWrapperInner>
      </Total>
      <ItemsWrapper>
        <div
          className="emotion-32 emotion-33"
        >
          <Item
            component="a"
            score={0}
            scoreBackgroundColor="#b10e1e"
            scoreColor="#ffffff"
            scoreDisabledBackgroundColor="#dee0e2"
            scoreDisabledColor="#0b0c0c"
          >
            <ItemWrapperInner
              disabled={true}
              empty={false}
            >
              <a
                className="emotion-14 emotion-15"
                disabled={true}
              >
                <ResultCountTitle
                  count={0}
                  countBackgroundColor="#dee0e2"
                  countColor="#0b0c0c"
                >
                  <Wrapper>
                    <div
                      className="emotion-4 emotion-1"
                    >
                      <ResultCount
                        backgroundColor="#dee0e2"
                        color="#0b0c0c"
                      >
                        <StyledResultCount
                          backgroundColor="#dee0e2"
                          color="#0b0c0c"
                        >
                          <span
                            className="emotion-8 emotion-1"
                            color="#0b0c0c"
                          >
                            0
                          </span>
                        </StyledResultCount>
                      </ResultCount>
                      <Title>
                        <div
                          className="emotion-2 emotion-3"
                        >
                          Counter 1
                        </div>
                      </Title>
                    </div>
                  </Wrapper>
                </ResultCountTitle>
              </a>
            </ItemWrapperInner>
          </Item>
          <Item
            active={true}
            component="a"
            score={2}
            scoreBackgroundColor="#b10e1e"
            scoreColor="#ffffff"
            scoreDisabledBackgroundColor="#dee0e2"
            scoreDisabledColor="#0b0c0c"
          >
            <ItemWrapperInner
              active={true}
              disabled={false}
              empty={false}
            >
              <a
                className="emotion-22 emotion-15"
                disabled={false}
              >
                <ResultCountTitle
                  count={2}
                  countBackgroundColor="#b10e1e"
                  countColor="#ffffff"
                >
                  <Wrapper>
                    <div
                      className="emotion-4 emotion-1"
                    >
                      <ResultCount
                        backgroundColor="#b10e1e"
                        color="#ffffff"
                      >
                        <StyledResultCount
                          backgroundColor="#b10e1e"
                          color="#ffffff"
                        >
                          <span
                            className="emotion-0 emotion-1"
                            color="#ffffff"
                          >
                            2
                          </span>
                        </StyledResultCount>
                      </ResultCount>
                      <Title>
                        <div
                          className="emotion-2 emotion-3"
                        >
                          Counter 2
                        </div>
                      </Title>
                    </div>
                  </Wrapper>
                </ResultCountTitle>
              </a>
            </ItemWrapperInner>
          </Item>
          <Item
            component="a"
            score={0}
            scoreBackgroundColor="#b10e1e"
            scoreColor="#ffffff"
            scoreDisabledBackgroundColor="#dee0e2"
            scoreDisabledColor="#0b0c0c"
          >
            <ItemWrapperInner
              disabled={true}
              empty={false}
            >
              <a
                className="emotion-14 emotion-15"
                disabled={true}
              >
                <ResultCountTitle
                  count={0}
                  countBackgroundColor="#dee0e2"
                  countColor="#0b0c0c"
                >
                  <Wrapper>
                    <div
                      className="emotion-4 emotion-1"
                    >
                      <ResultCount
                        backgroundColor="#dee0e2"
                        color="#0b0c0c"
                      >
                        <StyledResultCount
                          backgroundColor="#dee0e2"
                          color="#0b0c0c"
                        >
                          <span
                            className="emotion-8 emotion-1"
                            color="#0b0c0c"
                          >
                            0
                          </span>
                        </StyledResultCount>
                      </ResultCount>
                      <Title>
                        <div
                          className="emotion-2 emotion-3"
                        >
                          Counter 3
                        </div>
                      </Title>
                    </div>
                  </Wrapper>
                </ResultCountTitle>
              </a>
            </ItemWrapperInner>
          </Item>
        </div>
      </ItemsWrapper>
    </div>
  </Wrapper>
</CounterBar>
`;

exports[`CounterBar renders empty counters 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: inline-block;
  font-family: Roboto,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.25;
  padding: 2px;
}

.emotion-6 {
  border: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0 6px 6px 0;
  max-width: 250px;
  outline: none;
  padding: 0 8px 0 0;
  background: #ffffff;
  color: #ffffff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #6f777b;
  opacity: 0;
}

.emotion-6:focus {
  outline: solid 4px #ffbf47;
}

.emotion-6:last-child {
  margin-right: 0px;
}

.emotion-0 {
  background: #dee0e2;
  color: #0b0c0c;
  display: inline-block;
  font-family: Roboto,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.25;
  min-height: 20px;
  min-width: 20px;
  padding: 1px 4px;
  text-align: center;
}

<Item>
  <ItemWrapper
    disabled={true}
    empty={true}
  >
    <a
      className="emotion-6 emotion-7"
      disabled={true}
    >
      <ResultCountTitle
        count={0}
        countBackgroundColor="#dee0e2"
        countColor="#0b0c0c"
      >
        <Wrapper>
          <div
            className="emotion-4 emotion-1"
          >
            <ResultCount
              backgroundColor="#dee0e2"
              color="#0b0c0c"
            >
              <StyledResultCount
                backgroundColor="#dee0e2"
                color="#0b0c0c"
              >
                <span
                  className="emotion-0 emotion-1"
                  color="#0b0c0c"
                >
                  0
                </span>
              </StyledResultCount>
            </ResultCount>
            <Title>
              <div
                className="emotion-2 emotion-3"
              />
            </Title>
          </div>
        </Wrapper>
      </ResultCountTitle>
    </a>
  </ItemWrapper>
</Item>
`;
